# salazaar

./: .gitignore  LICENSE  README.md  get_ast.py  json2py copy.py  json2py.py  main.py  pyproject.toml  requirements.txt  tmp2.py  todo.md  tree.txt  tree2.txt
.github/workflows/: pr-gate.yaml  pypi-release.yaml
expressions/: call_expression.py
src/salazaar/: __init__.py  __main__.py  ast_converter.py  expressions.py  ext_types.py  extra_types.py  js_converter.py  json2py.py  parser.py  salazaar.py
src/salazaar/expressions/: variable_declaration.py
src/salazaar/tools/: get_ast.py
tests/: conftest.py  example.py  test_binary_exprs.py  test_for_loop.py  test_from_markdown.py  test_functions.py  test_if_statements.py  test_logical_expr.py  test_logical_expressions.py  test_loops.md  test_loops.py  test_variable_declaration.md  test_variable_declaration.py  test_variables.py  test_while_loop.py
tests/markdown/: anonymous_function.md  arithmetics.md  arrow_expression.md  assignment_expression.md  binary_expressions.md  boolean.md  class_declaration.md  classes.md  closures.md  collection_operations.md  collections.md  comments.md  conditional_expression.md  empty_statements.md  for_loops.md  function_declaration.md  function_expression.md  functions.md  if_statement.md  imports.md  json_functions.md  logical_expressions.md  logical_expressions.md2  loops.md  member_expression.md  new_expression.md  number.md  regex.md  string.md  string_operations.md  switch_case.md  tests_to_add.md  throw_statement.md  try_catch.md  typeof.md  update_expressions.md  variable_declaration.md  while_loops.md
