[project]
name = "salazaar"
description = "salaazaar is a library for transpiling JavaScript code to Python code."
authors = [
    { name = "Grzegorz Nowiński", email = "grzesiekn1001@gmail.com"}
]
license = "MIT"
license-files = [ "LICENSE" ]
readme = "README.md"
dynamic = ["version"]

requires-python = ">=3.13"
dependencies = [
    "esprima",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = 'https://github.com/novinxy/salazaar'
Source = 'https://github.com/novinxy/salazaar'

[tool.ruff]
line-length = 120

[tool.hatch.version]
path = "src/salazaar/__init__.py"

[project.scripts]
get-ast = "salazaar.tools.get_ast:main"
transpile = "salazaar.json2py:main"
