[project]
name = "salazaar"
description = "library for transpiling JavaScript code to Python code."
readme = "README.md"

authors = [ { name = "Grzegorz Nowiński", email = "grzesiekn1001@gmail.com"} ]
license = "MIT"
license-files = [ "LICENSE" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development",
    "Typing :: Typed"
]

dynamic = ["version"]

requires-python = ">=3.14"
dependencies = [
    "esprima",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = 'https://github.com/novinxy/salazaar'
Source = 'https://github.com/novinxy/salazaar'

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.lint.ruff]
preview = true
selected-extended = [
    "ARG",
    "B",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "SIM"
]

[tool.hatch.version]
path = "src/salazaar/__init__.py"

[project.scripts]
get-ast = "salazaar.tools.get_ast:main"
transpile = "salazaar.json2py:main"
